StockMarket/src/objects/Stock_RTInfo__c.object
<CustomObject>
    <description>用于保存股票某周期内的报价</description>
    <fields>
        <fullName>Buy1_Price__c</fullName>
        <label>Buy1_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy1_Volume__c</fullName>
        <description>买一量</description>
        <label>Buy1_Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy2_Price__c</fullName>
        <label>Buy2_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy2_Volume__c</fullName>
        <description>买二量</description>
        <label>Buy2_Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy3_Price__c</fullName>
        <label>Buy3_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy3_Volume__c</fullName>
        <label>Buy3_Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Price__c</fullName>
        <description>昨日收盘价</description>
        <label>Close Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Price__c</fullName>
        <description>当前价</description>
        <label>Current Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT__c</fullName>
        <description>发生时间</description>
        <label>DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>High_Price__c</fullName>
        <description>今日最高价</description>
        <label>High Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LongOrShort__c</fullName>
        <description>看多，看空，看平</description>
        <label>LongOrShort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>多</fullName>
                </value>
                <value>
                    <fullName>平</fullName>
                </value>
                <value>
                    <fullName>空</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Low_Price__c</fullName>
        <description>今日最低价</description>
        <label>Low Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Price__c</fullName>
        <description>今日开盘价</description>
        <label>Open Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <description>成交额</description>
        <label>Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell1_Price__c</fullName>
        <label>Sell1_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell1_Volume__c</fullName>
        <description>卖1量</description>
        <label>Sell1_Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell2_Price__c</fullName>
        <label>Sell2_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell2_Volume__c</fullName>
        <label>Sell2_Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell3_Price__c</fullName>
        <label>Sell3_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell3_Volume__c</fullName>
        <label>Sell3_Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StockName__c</fullName>
        <description>股票名称</description>
        <label>StockName</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>股票信息</description>
        <label>Stock</label>
        <referenceTo>Stock__c</referenceTo>
        <relationshipLabel>Stock RTInfo</relationshipLabel>
        <relationshipName>Stock_RTInfo</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>成交量</description>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stock RTInfo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stock__c</columns>
        <columns>Current_Price__c</columns>
        <columns>Open_Price__c</columns>
        <columns>Close_Price__c</columns>
        <columns>High_Price__c</columns>
        <columns>Low_Price__c</columns>
        <columns>Quota__c</columns>
        <columns>Volume__c</columns>
        <columns>DT__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000000000}</displayFormat>
        <label>股票实时信息</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>